# magnifiqus

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Config.cmake  README.md
.github/workflows/: build.yml
cmake/: AppStream.cmake  QtAppResources.cmake  Translate.cmake
resources/: about.html  resources.qrc
resources/icons/: application.icon
resources/linux/: magnifiqus.appdata.xml  magnifiqus.desktop
resources/translations/: magnifiqus.desktop.yaml  magnifiqus.ts  magnifiqus_fr.desktop.yaml  magnifiqus_fr.ts  magnifiqus_it.desktop.yaml  magnifiqus_it.ts  magnifiqus_ko.ts
src/: application.cpp  application.hpp  dialogabout.ui  dialogprefs.cpp  dialogprefs.hpp  dialogprefs.ui  litebutton.cpp  litebutton.hpp  magnifiqus.cpp  magnifiqus.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  qtilities.hpp  settings.cpp  settings.hpp  systemtrayicon.cpp  systemtrayicon.hpp  x11.cpp  x11.hpp
